Fix too wide code highlight blocks

--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,7 @@ a {
 a:hover {
     text-decoration: underline;
 }
+pre { white-space: pre; overflow: auto; }
 h1 {
     font-size: 2em;
 }
